# vibe-env

./: .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  package-lock.json  package.json
backend/: justfile  main.py  pyproject.toml
backend/bucket_harbour/: __init__.py
backend/bucket_harbour/application/: file_application_service.py
backend/bucket_harbour/domain/: models.py
backend/bucket_harbour/infrastructure/: database.py  file_service.py
backend/bucket_harbour/presentation/: routes.py  schemas.py
backend/scripts/: explore_json2.py  explore_jsonl.py
backend/src/domain/: models.py
backend/src/infrastructure/: database.py  file_service.py
backend/src/presentation/: routes.py  schemas.py
backend/tests/: test_file_events_integration.py
backend/tests/application/: test_file_application_service.py
backend/utilz/: download.py
docs/: dev-infra-prompt.md  prd-001.md  ui-architecture.md
frontend/: index.html  justfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  logger.ts  main.tsx  types.ts
frontend/src/components/: AddModelForm.tsx  AppFooter.tsx  ChatMessage.tsx  DataExplorer.tsx  DirectChatContainer.tsx  DirectChatInput.tsx  DragDropUploader.tsx  FileViewer.tsx  FilesTable.tsx  Header.tsx  MessageList.tsx  ModelConfigEditor.tsx  ModelList.tsx  ModelsView.tsx  PiDevSessionDetail.tsx  PiDevSessionsOverview.tsx  Sidebar.tsx  WelcomeMessage.tsx
frontend/src/store/: appStore.ts
