[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.19",
    "fastapi>=0.136.3",
    "llm>=0.31",
    "llm-gemini>=0.32",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.30",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "ipython>=9.14.1",
    "pyfakefs>=6.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
test = [
    "moto[s3]>=5.2.1",
    "pyfakefs>=6.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bucket_harbour", "bucket_harbour.*"]
